# streaming101-beam-opendata

realtime-public-transport/: .gitignore  README.md  sample.txt
realtime-public-transport/.temp-beam-5ad23092-d72a-4585-abe0-a0c7c644183f/: 10ac7587e94c7f34-feae-4326-8354-2483c797fe22  4cef78dc694c8d8c-b853-48a9-8c24-faf976ef1418  60dcbf7d221efc7c-7ad1-4726-b9f1-7cf60bac30af  991f078958ddef29-b9b5-45f0-9ff2-19851f4d612c  9947fc4fe36b1d25-0323-4607-a133-5c42d262b765  a8bc890753c39ad8-b49f-4db3-9406-2256818ba317  ddf834daeb372883-91f6-42aa-bb09-6d26b22d5260
realtime-public-transport/.temp-beam-a59032aa-c254-462c-a904-0cfecedad4cd/: 4be82ed3dd704329-644b-40bb-8a4b-13d9c63f4057  558293bbbbbc5d1f-2f58-484b-85a5-3a578d87b487  6767bc965242bf0a-c0e0-4073-a7fd-ab8647ac14f9  80c19ab39174dfd8-6086-4e3c-bc25-1fc67c0541d1  b4ce7cd8b0ab809b-f7eb-4f8d-9a38-4ff7a20bf8d1
realtime-public-transport/schema/vehicle-pos/: gtfs-realtime_1007_extension.proto
realtime-public-transport/src/main/java/com/github/laysakura/streaming101/: DebuggingWordCount.java  WindowedWordCount.java
realtime-public-transport/src/main/java/com/github/laysakura/streaming101/common/: ExampleBigQueryTableOptions.java  ExamplePubsubTopicOptions.java  ExampleUtils.java  WriteOneFilePerWindow.java
realtime-public-transport/vehicle-pos-consumer/: README.md  pom.xml  unixtime-00000-of-00001
realtime-public-transport/vehicle-pos-producer/: .env.sample  Cargo.toml  README.md
realtime-public-transport/vehicle-pos-producer/src/: config.rs  kafka_producer.rs  main.rs  vehicle_pos_request.rs
(+36 files in other folders)
